package Lib;

public enum Genre {
    MASCULIN,
    FEMININ
}

